# TensorEECs

./: .gitignore  CMakeLists.txt  LICENSE  README.md  math.tex
benchmarks/: CMakeLists.txt  benchmark.cpp  plot_benchmarks.py  run_benchmarks.sh
cmake/: CompilerWarnings.cmake
docs/: API_SPEC.md
include/tensoreecs/: eec.hpp  precompute.hpp  types.hpp
include/tensoreecs/internal/: indexing.hpp
python/: CMakeLists.txt  bindings.cpp
src/: eec_runtime.cpp
tests/: CMakeLists.txt  test_edge_cases.cpp  test_eec2.cpp  test_eec3.cpp  test_invariance.cpp  test_python_smoke.py
